<resources>
    <string name="app_name">Pear</string>
    <string name="action_settings">Settings</string>
    <string name="action_level">Level</string>
    <string name="action_theme">Theme</string>
    <string name="level_sandbox">Sandbox</string>
    <string name="level_medium">Medium</string>
    <string name="level_russia">Russia</string>
    <string name="theme_blue">Blue Theme</string>
    <string name="theme_main">Main Theme</string>
</resources>
